# MediumPower

./: README.md  install.sh  mediumcython.py  setup.py  thermal-medium-power.service
rust/: Cargo.toml  Cross.toml  Dockerfile.cross  build.sh
rust/src/: basic_clip.rs  classifier.rs  clip_track_extractor.rs  frame.rs  frame_buffer.rs  header_info.rs  kalman.rs  main.rs  medium_power.rs  motion_detector.rs  rectangle.rs  region.rs  region_tracker.rs  tools.rs  track.rs
src/: cameraconfig.py  cliptrackextractor.py  cliptrackextractor.pyx  cptvwriter.py  dbusservice.py  dbustest.py  eventlog.py  kalman.pyx  liteinterpreter.py  mediumpower.py  mediumpower.pyx  motiondetector.py  motiondetector.pyx  rectangle.pxd  rectangle.pyx  region.pxd  region.py  region.pyx  tools.py  tools.pyx  track.py  track.pyx  tracker.pyx  trackprediction.py
